# turret

./: .gitignore  LICENSE  README.md
src/turret_bringup/: CMakeLists.txt  package.xml
src/turret_bringup/launch/: turret_demo.launch.py
src/turret_bringup/src/: target_sim_node.cpp
src/turret_control/: CMakeLists.txt  package.xml
src/turret_control/include/turret_control/: pid_controller.hpp
src/turret_control/src/: joint_simulator_node.cpp  pid_controller.cpp  turret_controller_node.cpp
src/turret_description/: CMakeLists.txt  package.xml
src/turret_description/config/: turret_sim.rviz
src/turret_description/urdf/: turret.urdf.xacro
src/turret_fusion/: CMakeLists.txt  package.xml
src/turret_fusion/include/turret_fusion/: kalman_filter.hpp
src/turret_fusion/src/: fusion_node.cpp  kalman_filter.cpp  target_marker_node.cpp
src/turret_msgs/: CMakeLists.txt  package.xml
src/turret_msgs/msg/: CameraDetection.msg  RadarDetection.msg  TrackedTarget.msg  TrackedTargetArray.msg
src/turret_radar/: CMakeLists.txt  package.xml
src/turret_radar/src/: radar_sim_node.cpp
src/turret_vision/: CMakeLists.txt  package.xml
src/turret_vision/src/: synthetic_camera_node.cpp  vision_detector_node.cpp
