<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turret_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for bringing up the full turret system</description>
  <maintainer email="ben@todo.com">Ben Klassen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>turret_description</exec_depend>
  <exec_depend>turret_vision</exec_depend>
  <exec_depend>turret_radar</exec_depend>
  <exec_depend>turret_fusion</exec_depend>
  <exec_depend>turret_control</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
