<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turret_radar</name>
  <version>0.1.0</version>
  <description>Simulated radar sensor for target range and velocity detection</description>
  <maintainer email="ben@todo.com">Ben Klassen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>turret_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
